# SkillNav

./: .gitignore  README.md  habitat_evaluation.py  pyproject.toml  run_habitat.sh  skillnav_environment.yaml
config/: habitat_eval_hm3dv1.yaml  habitat_eval_hm3dv2.yaml  habitat_eval_hssd.yaml  habitat_eval_mp3d.yaml
config/prompts/: bed_prompts.yaml  chair_prompts.yaml  couch_prompts.yaml  potted_plant_prompts.yaml  sofa_prompts.yaml  toilet_prompts.yaml  tv_monitor_prompts.yaml  tv_prompts.yaml
llm/: answer.py  instrumentation.py
llm/answers/: llm_answer_hm3d.txt  llm_response_list.txt
llm/client/: deepseek_answer.py  ollama_answer.py
scripts/: aggregate_calls.py  cleanup.sh  compare_test_results.py  extract_ablation_metrics.py  extract_paper_data.py  make_per_category_bar.py  make_per_category_variants.py  make_phase_llm_trace.py  make_teaser_mockup.py  run_skillnav.sh  start_vlm_servers.sh
scripts/regression_episodes/: both_fp.json  (+4 more)
src/planner/plan_env/: CMakeLists.txt
src/planner/plan_env/include/plan_env/: async_result_buffer.h  exploration_agent.h  frontier_map2d.h  itm_model_interface.h  map_ros.h  memory_agent.h  multi_valuemap_manager.h  object_map2d.h  perception_utils2d.h  sdf_map2d.h  value_map2d.h  voronoi_topology.h
src/planner/plan_env/msg/: StrategicLLMRequest.msg  StrategicLLMResponse.msg  VLMDeadZoneRequest.msg  VLMDeadZoneResponse.msg  VLMMemoryRequest.msg  VLMMemoryResponse.msg
src/planner/plan_env/scripts/: blip2_itm_client.py  strategic_agent_node.py  vlm_memory_agent_node.py  vlm_safe_agent_node.py
src/planner/plan_env/src/: exploration_agent.cpp  frontier_map2d.cpp  map_ros.cpp  memory_agent.cpp  multi_valuemap_manager.cpp  object_map2d.cpp  perception_utils2d.cpp  sdf_map2d.cpp  value_map2d.cpp  voronoi_topology.cpp
vlm/: __init__.py
(+44 files in other folders)
